fixed list spacing in joins

--- a/modules/joins/client/css/joins.css
+++ b/modules/joins/client/css/joins.css
@@ -2,10 +2,8 @@
     height: 355px;
     width: 375px;
     background-color: #6C9AC3;
-    margin-bottom: 50px;
     margin: 0 auto;
     margin-bottom: 35px;
-
 }
 
 
@@ -25,6 +23,17 @@
     margin-bottom: 15%;
 }
 
+.circle-text ul{
+   margin-left: -3%;
+   margin-right: 3%;
+}
+
+.circle-text li {
+  font-family: 'Avenir Roman';
+  line-height: 25px;
+}
+
+
 .message {
     font-family: 'Avenir Black';
     margin: 3% 0;
@@ -41,10 +50,6 @@
 }
 
 
-.circle-text li {
-  font-family: 'Avenir Roman';
-  line-height: 25px;
-}
 
 
 .apply-button{
